<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/ai_provider_and_model"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="aiManageProviders"
            android:summary="@string/ai_no_providers"
            android:title="@string/ai_manage_providers"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiManageModels"
            android:summary="@string/ai_no_models"
            android:title="@string/ai_manage_models"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiEditRequest"
            android:summary="@string/ai_edit_request_summary_global"
            android:title="@string/ai_edit_request"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiContextTrim"
            android:summary="@string/ai_context_trim_summary"
            android:title="@string/ai_context_trim"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiSendImageMaxPixels"
            android:summary="@string/ai_send_image_max_resolution_summary"
            android:title="@string/ai_send_image_max_resolution"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiTestCurrentConnection"
            android:summary="@string/ai_connection_test_summary"
            android:title="@string/ai_connection_test"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/ai_logs_category"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="aiLogs"
            android:summary="@string/ai_log_summary_empty"
            android:title="@string/ai_log"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiExportLogs"
            android:summary="@string/ai_log_export_summary"
            android:title="@string/ai_log_export"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:key="aiApiRedactionEnabled"
            android:defaultValue="true"
            android:summary="@string/ai_api_redaction_summary"
            android:title="@string/ai_api_redaction"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/ai_chapter_purify"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyFlowInfo"
            android:title="@string/ai_chapter_purify_flow_info"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="aiChapterPurifyAdEnabled"
            android:summary="@string/ai_chapter_purify_ad_summary"
            android:title="@string/ai_chapter_purify_ad"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="aiChapterPurifyNoiseEnabled"
            android:summary="@string/ai_chapter_purify_noise_summary"
            android:title="@string/ai_chapter_purify_noise"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="aiChapterPurifyTypoEnabled"
            android:summary="@string/ai_chapter_purify_typo_summary"
            android:title="@string/ai_chapter_purify_typo"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="aiChapterPurifyReuseCurrentModel"
            android:summary="@string/ai_chapter_purify_reuse_current_model_summary"
            android:title="@string/ai_chapter_purify_reuse_current_model"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyProvider"
            android:title="@string/ai_chapter_purify_provider"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyModel"
            android:title="@string/ai_chapter_purify_model"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyRequestTemplate"
            android:summary="@string/ai_chapter_purify_request_template_summary"
            android:title="@string/ai_chapter_purify_request_template"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyTestConnection"
            android:summary="@string/ai_chapter_purify_test_connection_summary"
            android:title="@string/ai_chapter_purify_test_connection"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyPrompt"
            android:summary="@string/ai_chapter_purify_prompt_summary"
            android:title="@string/ai_chapter_purify_prompt"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyPreprocess"
            android:summary="@string/ai_chapter_purify_preprocess_summary"
            android:title="@string/ai_chapter_purify_preprocess"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="aiChapterPurifySummaryEnabled"
            android:summary="@string/ai_chapter_purify_summary_enabled_summary"
            android:title="@string/ai_chapter_purify_summary_enabled"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyChapterCount"
            android:title="@string/ai_chapter_purify_chapter_count"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifySegmentLimit"
            android:title="@string/ai_chapter_purify_segment_limit"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyRetryCount"
            android:title="@string/ai_chapter_purify_retry_count"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiChapterPurifyConcurrency"
            android:title="@string/ai_chapter_purify_concurrency"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="aiCreationCategory"
        android:title="@string/ai_creation"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationImageManageProviders"
            android:summary="@string/ai_creation_current_provider_empty"
            android:title="@string/ai_creation_image_manage_providers"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationImageApiKeyJump"
            android:title="@string/ai_creation_image_api_key_jump"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationImageManageModels"
            android:summary="@string/ai_creation_current_model_empty"
            android:title="@string/ai_creation_image_manage_models"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationImageTestConnection"
            android:summary="@string/ai_creation_image_test_connection_summary"
            android:title="@string/ai_creation_image_test_connection"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationVideoManageProviders"
            android:summary="@string/ai_creation_current_provider_empty"
            android:title="@string/ai_creation_video_manage_providers"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationVideoManageModels"
            android:summary="@string/ai_creation_current_model_empty"
            android:title="@string/ai_creation_video_manage_models"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationVideoTestConnection"
            android:summary="@string/ai_creation_video_test_connection_summary"
            android:title="@string/ai_creation_video_test_connection"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="aiCreationReuseCurrentModel"
            android:summary="@string/ai_creation_reuse_current_model_summary"
            android:title="@string/ai_creation_reuse_current_model"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationProvider"
            android:title="@string/ai_creation_provider"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationModel"
            android:title="@string/ai_creation_model"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationTestConnection"
            android:summary="@string/ai_creation_test_connection_summary"
            android:title="@string/ai_creation_test_connection"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationLlmVariables"
            android:summary="@string/ai_creation_llm_variables_summary"
            android:title="@string/ai_creation_llm_variables"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationPromptTemplate"
            android:summary="@string/ai_creation_prompt_template_summary"
            android:title="@string/ai_creation_prompt_template"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationScope"
            android:summary="@string/ai_creation_scope_summary"
            android:title="@string/ai_creation_scope"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationImageRetryCount"
            android:title="@string/ai_creation_image_retry_count"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCreationPromptRegenerateLimit"
            android:title="@string/ai_creation_prompt_regenerate_limit"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="aiStoryboardCategory"
        android:title="@string/ai_storyboard_category"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="aiStoryboardReuseCurrentModel"
            android:summary="@string/ai_storyboard_reuse_current_model_summary"
            android:title="@string/ai_storyboard_reuse_current_model"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiStoryboardProviderId"
            android:title="@string/ai_storyboard_provider"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiStoryboardModelId"
            android:title="@string/ai_storyboard_model"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiStoryboardRequestTemplate"
            android:summary="@string/ai_storyboard_request_template_summary"
            android:title="@string/ai_storyboard_request_template"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiCastingRequestTemplate"
            android:summary="@string/ai_casting_request_template_summary"
            android:title="@string/ai_casting_request_template"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiStoryboardPreloadCount"
            android:title="@string/ai_storyboard_preload_count"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="agentCategory"
        android:title="@string/agent_category"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.lib.prefs.SwitchPreference
            android:key="agentEnabled"
            android:title="@string/agent_enabled"
            android:persistent="false"
            app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference
            android:key="agentMcp"
            android:title="@string/agent_mcp"
            app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference
            android:key="agentServers"
            android:title="@string/agent_servers"
            app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference
            android:key="agentSkills"
            android:title="@string/agent_skills"
            app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference
            android:key="agentModes"
            android:title="@string/agent_modes"
            app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference
            android:key="agentPrompts"
            android:title="@string/agent_prompts"
            app:iconSpaceReserved="false" />
        <io.legado.app.lib.prefs.Preference
            android:key="agentTools"
            android:title="@string/agent_tools"
            app:iconSpaceReserved="false" />
    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="aiTimeoutCategory"
        android:title="@string/ai_timeout"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="aiSseIdleTimeoutSeconds"
            android:title="@string/ai_sse_idle_timeout"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiGenerationTimeoutSeconds"
            android:title="@string/ai_generation_timeout"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiThinkingInterruptSeconds"
            android:title="@string/ai_thinking_interrupt_seconds"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="aiThinkingInterruptMaxCount"
            android:title="@string/ai_thinking_interrupt_max_count"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/ai_advanced_settings_category"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.SwitchPreference
            android:key="aiAdvancedSettingsEnabled"
            android:defaultValue="false"
            android:summary="@string/ai_advanced_settings_summary"
            android:title="@string/ai_advanced_settings"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
